2008-07-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (DestroyBlob, DestroyBlobInfo): Implementation is
	a bit more robust.

2008-07-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Remove over-write of
	image->client_data.  Resolves SourceForge issue [ 2018974 ]
	client_data is not passed to streamhandler.
	* coders/png.c (WriteOnePNGImage): Fix crash when writing PNG
	images with transparency and either type Optimize is requested, or
	the image is colormapped.

2008-07-12  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Fixed problem: "In this case, the referenced 
	images had previously been deallocated but are still being used.
	Since they are overwritten, their signatures are invalid."

2008-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (ReadDCMImage): Report actual image depth.
	* magick/resource.c (InitializeMagickResources): Set default
	maximum memory limit to physical memory rather than 2X physical
	memory.  This decision is made since the system paging device is
	often slower than files in the filesystem, and so memory mapping
	is likely faster.
	* magick/blob.c (OpenBlob): The MAGICK_IO_FSYNC environment
	variable causes output files to be synchronized to disk when set
	to TRUE.

2008-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/GraphicsMagick.html: Improved formatting of documentation.

2008-07-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Make use of the new
	'extension_treatment' field.
	* coders/dcraw.c (ReadDCRAWImage): Added a coder module to proxy
	from various common RAW camera format extensions to the 'dcraw'
	delegate.
	* magick/magick.h (MagickInfo): Add an extension_treatment member
	to indicate how file extensions should be treated for this coder.

2008-06-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/{animate.c,quantize.c}: Replace !ColorMatch() with
	NotColorMatch().