@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-07-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/psd.c (RegisterPSDImage): Fix module registration memory leak.
+  <LI> coders/jpeg.c (RegisterJPEGImage): Fix module registration memory leak.
+
+</UL>
+<p>
 2008-07-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
